<resources>
    <string name="app_name">Mtg Token Suggester</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_card_list">CardList</string>
    <string name="title_activity_token_list">TokenList</string>
    <string name="ability">Ability</string>
    <string name="artifact">Artifact</string>
    <string name="enchantment">Enchantment</string>
    <string name="creature">Creature</string>
    <string name="power">Power</string>
    <string name="toughness">Toughness</string>
    <string name="submit">Submit</string>
    <string name="white">White</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="green">Green</string>

    <string name="background_image">background image</string>
    <string name="action_about">About</string>
    <string name="about_dialog_title">About MTG Token Suggester</string>
    <string name="about_dialog_banner">
        <![CDATA[Created by Isaac Lichter and Isaiah Blanks\n
        2020 Android Application Design
        ]]>
    </string>

    <string name="numberOfTokensXKey">numberOfTokensX</string>
    <string name="numberOfTokensXSummary">How many tokens to use for an X cost spell</string>
    <string name="preferenceTitle">Token Preferences</string>
    <string name="numberOfTokensXTitle">Number of Tokens X Spell</string>
    <string name="numberOfTokensXDefaultValue">3</string>

    <string name="numberOfTokensTriggerKey">numberOfTokensTrigger</string>
    <string name="numberOfTokensTriggerSummary">How many tokens to use for a spell with a triggered ability</string>
    <string name="numberOfTokensTriggerDefaultValue">5</string>
    <string name="numberOfTokensTriggerTitle">Number of Tokens Triggered Ability</string>
    <string name="tv_token_1_text">Token 1</string>
    <string name="tv_token_2_text">Token 2</string>
    <string name="tv_token_3_text">Token 3</string>
    <string name="tv_tokens_text">Tokens</string>
    <string name="action_add_tokens">Add Tokens</string>
    <string name="action_token_list">Token List</string>
    <string name="tv_main_title">Magic The Gathering: Token Suggester</string>
    <string name="tv_main_placeholder_text">Placeholder for suggested tokens</string>


</resources>
