<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/preferenceTitle">

        <EditTextPreference
            app:key="@string/numberOfTokensXKey"
            app:summary="@string/numberOfTokensXSummary"
            app:defaultValue="@string/numberOfTokensXDefaultValue"
            app:title="@string/numberOfTokensXTitle"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="@string/numberOfTokensTriggerKey"
            app:summary="@string/numberOfTokensTriggerSummary"
            app:defaultValue="@string/numberOfTokensTriggerDefaultValue"
            app:title="@string/numberOfTokensTriggerTitle"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
