<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TokenAddingActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:gravity="center">

            <CheckBox
                android:id="@+id/cb_artifact"
                android:text="@string/artifact"></CheckBox>

        </TableRow>

        <TableRow android:gravity="center">

            <CheckBox
                android:id="@+id/cb_enchantment"
                android:text="@string/enchantment"></CheckBox>

        </TableRow>

        <TableRow android:gravity="center">

            <CheckBox
                android:id="@+id/cb_creature"
                android:text="@string/creature"></CheckBox>

        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/tv_power"
                android:padding="@dimen/default_padding"
                android:text="@string/power"
                android:textSize="@dimen/default_text_size"
                style="@style/rowItem" />

            <EditText
                android:id="@+id/et_power"
                android:minEms="5"
                android:padding="@dimen/default_padding"
                android:textSize="@dimen/default_text_size"
                style="@style/rowItem" />

        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/tv_toughness"
                android:padding="@dimen/default_padding"
                android:text="@string/toughness"
                android:textSize="@dimen/default_text_size"
                style="@style/rowItem" />

            <EditText
                android:id="@+id/et_toughness"
                android:minEms="5"
                android:padding="@dimen/default_padding"
                android:textSize="@dimen/default_text_size"
                style="@style/rowItem" />

        </TableRow>

        <TableRow android:id="@+id/colors" android:gravity="center">

            <CheckBox android:id="@+id/cb_white"
                style="@style/rowItem"
                android:textColor="@color/colorWhite"
                android:text="@string/white"/>

            <CheckBox android:id="@+id/cb_blue"
                style="@style/rowItem"
                android:textColor="@color/colorBlue"
                android:text="@string/blue"/>

            <CheckBox android:id="@+id/cb_black"
                style="@style/rowItem"
                android:textColor="@color/colorBlack"
                android:text="@string/black"/>

            <CheckBox android:id="@+id/cb_red"
                style="@style/rowItem"
                android:textColor="@color/colorRed"
                android:text="@string/red"/>

            <CheckBox android:id="@+id/cb_green"
                style="@style/rowItem"
                android:textColor="@color/colorGreen"
                android:text="@string/green"/>

        </TableRow>


        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/tv_ability"
                android:padding="@dimen/default_padding"
                android:text="@string/ability"
                android:textSize="@dimen/default_text_size"
                style="@style/rowItem" />

            <EditText
                android:id="@+id/et_ability"
                android:minEms="5"
                android:padding="@dimen/default_padding"
                android:textSize="@dimen/default_text_size"
                style="@style/rowItem" />

        </TableRow>

        <TableRow android:gravity="center">
            <Button android:id="@+id/button_submit"
                android:text="@string/submit"
                android:onClick="addToken"/>
        </TableRow>
    </TableLayout>
</LinearLayout>